# kb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test.rest
apps/api/: Cargo.toml
apps/api/src/: auth_routes.rs  main.rs
apps/web/: README.md
apps/web-next/: next.config.js  package-lock.json  package.json  tsconfig.json
apps/web-next/.next/: BUILD_ID  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web-next/.next/cache/: .tsbuildinfo
apps/web-next/.next/cache/webpack/client-development/: index.pack.gz.old
apps/web-next/.next/cache/webpack/client-production/: index.pack
apps/web-next/.next/cache/webpack/edge-server-production/: index.pack
apps/web-next/.next/cache/webpack/server-development/: index.pack.gz.old
apps/web-next/.next/cache/webpack/server-production/: 0.pack  index.pack
apps/web-next/.next/server/: middleware-build-manifest.js  pages-manifest.json
apps/web-next/.next/server/pages/: 404.html  500.html  admin.html  index.html
apps/web-next/.next/static/chunks/pages/: admin-2daa5824fcaf72c2.js  index-39221db9d6769bd7.js
apps/web-next/.next/static/r0w7Q6FUeJHM9WLeZ8obt/: _buildManifest.js
apps/web-next/pages/: admin.tsx  index.tsx
apps/web/public/: demo.html
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
configs/: default.yaml
crates/kb-auth/: Cargo.toml
crates/kb-auth/src/: jwt.rs  lib.rs  middleware.rs  models.rs  password.rs  permissions.rs  rbac.rs  session.rs
crates/kb-core/: Cargo.toml
crates/kb-core/src/: lib.rs
crates/kb-error/: Cargo.toml
crates/kb-error/src/: lib.rs
crates/kb-graph/: Cargo.toml
crates/kb-graph/src/: lib.rs  neo4j.rs
crates/kb-llm/: Cargo.toml
crates/kb-llm/src/: lib.rs
crates/kb-rag/: Cargo.toml
crates/kb-rag/src/: engine.rs  hybrid.rs  lexical.rs  lib.rs  memory.rs  multi_provider.rs  qdrant.rs  qdrants.rs  qdrantss.rs  rerank.rs
data/jobs/: db  snap.0000000000000094
deployments/: docker-compose.yaml
deployments/migrations/: 0001_jobs.sql  0002_indexes.sql  0003_auth_system.sql  0004_extend_existing_tables.sql
docs/: architecture.md  env_config.md  local_dev_setup.md  product_spec.md  quickstart.md  rig_integration.md  team_and_execution.md
docs/api/: openapi.yaml
docs/deployment/: ops_guide.md
docs/testing/: test_plan.md
scripts/migrations/: 0001_init.sql
services/rerank/: Dockerfile  README.md  requirements.txt  server.py
