[package]
name = "kb-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心依赖
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 异步和Web框架
axum = "0.7"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "auth"] }

# 密码学和JWT
bcrypt = "0.15"
jsonwebtoken = "9.2"
rand = "0.8"

# 数据库
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }

# Redis
redis = { version = "0.23", features = ["tokio-comp", "serde_json"] }

# 错误处理
thiserror = "1.0"

# 日志
tracing = "0.1"

# 内部依赖
kb-error = { path = "../kb-error" }
kb-core = { path = "../kb-core" }