[package]
name = "kb-error"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["time"] }
reqwest = "0.12"
axum = { version = "0.7", optional = true }
qdrant-client = "1"
rig-core = { version = "0.19", features = ["derive"] }
anyhow = "1"

[features]
default = []
axum = ["dep:axum"]
