[package]
name = "kb-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
kb-core = { path = "../kb-core" }
kb-error = { path = "../kb-error" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

